--- a/public/css/ushers.css
+++ b/public/css/ushers.css
@@ -100,10 +100,15 @@ li>label {
     font-weight: normal;
 }
 
+#tablefilter {
+    margin-left: 5%;
+    margin-top: 40px;
+}
+
 .table {
     margin-left: 5%;
     margin-right: 15%;
-    margin-top: 30px;
+    margin-top: 20px;
     width:80%;
 }
 
