--- a/public/css/ushers.css
+++ b/public/css/ushers.css
@@ -1,5 +1,4 @@
-
-body {
+body, footer {
     background-color: #96352f;
 }
 
@@ -55,19 +54,35 @@ form {
     width: 100px;
 }
 
-.nav-tabs {
+.navbar {
+    border-radius: 0;
+    min-height: 0;
+}
+
+.navbar-default {
+    border: none;
+    border-bottom: 1px solid #96352f;
+}
+
+.navbar-default .navbar-nav>li>a {
+    color: white;
+}
+
+.navbar-nav {
     padding-left: 10px;
     border-bottom: 0;
 }
 
-.nav-border {
-    border-bottom: 1px solid #96352f;
-}
-
-.nav-tabs>li>a, .nav-tabs>li>a:hover {
+.navbar-nav>li>a, .navbar-nav>li>a:hover {
     border: 1px solid #96352f;
     background: #96352f;
     color: white;
+    border-bottom: 0;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin-right: 2px;
 }
 
 #COTMSymbol {
@@ -160,4 +175,72 @@ footer {
 
 footer>a {
     color: white;
+}
+
+.navbar {
+    background-color: white;
+}
+
+@media screen and (min-width: 767px) {
+
+  .navbar-brand {
+    display: none;
+  }
+
+
+}
+
+@media screen and (max-width: 767px) {
+    .table {
+        margin-left: 0;
+        margin-right: 0;
+        margin-top: 20px;
+        font-size: 85%;
+        width:100%;
+    }
+
+    .container-fluid {
+        padding-right: 5px;
+        padding-left: 5px;
+    }
+
+    .page-header {
+        display: none;
+    }
+
+    .navbar-nav>li>a, .navbar-nav>li>a:hover {
+        border-bottom-left-radius: 4px;
+        border-bottom-right-radius: 4px;
+        margin-right: 15px;
+        margin-left:15px;
+        border-bottom: 1px solid #96352f;
+    }
+
+    h1 {
+        font-size: 26px;
+    }
+
+    .navbar-default .navbar-toggle:focus, .navbar-default .navbar-toggle:hover {
+        background-color: none;
+    }
+
+    .navbar-default .navbar-toggle {
+        border: none;
+    }
+
+    .navbar-header {
+        background-color: #96352f;
+    }
+
+    .navbar-brand {
+        height: auto;
+    }
+
+    .navbar-brand img {
+        width: 100%;
+    }
+
+    .navbar-default .navbar-toggle .icon-bar {
+        background-color: white;
+    }
 }
